Nutch Change Log

Release nutchgora - Current Development
* NUTCH-1026 Strip UTF-8 non-character codepoints (markus, ferdy)

* NUTCH-1358 Do not accept bogus arguments (ferdy)

* NUTCH-1349 Make batchId explcit within debug logging and improve CLI (lewismc + ferdy)

* NUTCH-1352 Improve regex urlfilters/normalizers synchronization (ferdy)

* NUTCH-1356 ParseUtil use ExecutorService instead of manually thread handling. (ferdy)

* NUTCH-1355 nutchgora Configure minimum throughput for fetcher (ferdy)

* NUTCH-1354 nutchgora support fetcher.queue.depth.multiplier property (ferdy)

* NUTCH-1353 nutchgora DomainStatistics support crawlId, counter bug and reformatting (ferdy)

* NUTCH-1350 remove unused dependancy because of access restriction (ferdy)

* NUTCH-1205 Upgrade gora modules to 0.2 in ivy/ivy.xml (lewismc, ferdy)

* NUTCH-882 Design a Host table in GORA (jnioche, ab, dogacan, Mathijs Homminga, ferdy)

* NUTCH-1340 Increase scalability by only removing markers when they actually exist for DbUpdaterReducer (ferdy)

* NUTCH-1333 Introduce AvroStore, DataFileAvroStore and Accumulo Datastore implementations (lewismc)

* NUTCH-1312 Nutchgora to send HTTP-accept header (ferdy)

* NUTCH-1311 Add response headers to datastore for the protocol-httpclient plugin (Dan Rosher via ferdy)

* NUTCH-1304 GeneratorMapper.java dosen't return when skipping and already generated mark (Dan Rosher via lewismc)

* NUTCH-1307 Improve formatting of ant targets for clearer project help (lewismc)

* NUTCH-1302 nutchgora job failures should be noticed by submitter (ferdy)

* NUTCH-1298 Pass numTasks to FetcherJob (Dan Rosher via ferdy)

* NUTCH-1289 In distributed mode URL's are not partitioned (Dan Rosher, ferdy)

* NUTCH-1292 Better exception logging and debugging during fetch. (ferdy)

* NUTCH-1263 FetcherJob must put 'fetchTime' on input (ferdy)

* NUTCH-1296 nutchgora fetcher does not show correct 'threads' and 'resuming' properties (ferdy)
